--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -6,19 +6,21 @@ server:
 spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+  devtools:
+    add-properties: false
   output:
     ansi:
       enabled: always
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.199.124:3307/halo_dev?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://\${DB_HOST:localhost}:\${DB_PORT:3306}/\${DB_NAME}?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
     password: qqq
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     open-in-view: false
   flyway:
     enabled: false
@@ -26,8 +28,7 @@ spring:
     multipart:
       max-file-size: 10240MB
       max-request-size: 10240MB
-  cache:
-    type: none
+      location: \${java.io.tmpdir}
 management:
   endpoints:
     web:
@@ -36,17 +37,13 @@ management:
         include: ['httptrace', 'metrics','env','logfile','health']
 logging:
   level:
-    run.halo.app: DEBUG
-    org.hibernate: INFO
-    org.hibernate.type.descriptor.sql.BasicBinder: INFO
-    org.hibernate.type.descriptor.sql.BasicExtractor: INFO
+    run.halo.app: INFO
   file:
-    path: ${user.home}/halo-dev/logs
+    path: \${user.home}/.halo/logs
 
 halo:
-  doc-disabled: false
-  production-env: false
-  auth-enabled: true
-  mode: development
-  workDir: ${user.home}/halo-dev/
-  cache: memory
+  download-timeout: 5m
+  ache: memory
+
+application:
+  version: ${version}
